2009-12-13  Armando Basile  <hmandevteam@gmail.com>

	* properties/AssemblyInfo.cs: 

	- added sign to project file and removed from AssemblyInfo