@@ -1,40 +1,37 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Settings>
 	<language>
-		<DESCFILE>Archivo a analizar</DESCFILE>
-		<LBLFILE>Nombre de archivo:</LBLFILE>
-		<DESCVIDEO>Vídeo</DESCVIDEO>
-		<VCOL1NAME>Información</VCOL1NAME>
-		<VCOL2NAME>Descripción</VCOL2NAME>
-		<DESCAUDIO>Audio</DESCAUDIO>
-		<ACOL1NAME>Información</ACOL1NAME>
-		<ACOL2NAME>Descripción</ACOL2NAME>
-		<ABOUTBT>_Acerca de</ABOUTBT>
-		<EXPORTBT>_Exportar</EXPORTBT>
-		<FOURCCBT>_FourCC</FOURCCBT>
-		<UDATABT>_UserData</UDATABT>
-		<RESCANBT>_Re-analizar</RESCANBT>
-		<FCTITLE>Seleccionar archivo a analizar</FCTITLE>
-		<TTTEXPORT>Guardar informe como archivo de texto</TTTEXPORT>
-		<TTTFOURCC>Cambiar el valor y la descripción FourCC</TTTFOURCC>
-		<TTTUDATA>Guardar el archivo con el valor estándar de UserData (DivX999b000p)</TTTUDATA>
-		<FOURCCSURE>¿Está seguro de querer actualizar el archivo avi con los nuevos valores FourCC?</FOURCCSURE>
-		<FOURCCTITLE>Cambiar valores FourCC</FOURCCTITLE>
-		<UDATAERROR>Encontrada sección REC o IX??. No es posible exportar el archivo</UDATAERROR>
-		<UDATATITLE>Guardar archivo</UDATATITLE>
-		<EXPORTTITLE>Inserte ruta del archivo donde exportar el resultado del análisis...</EXPORTTITLE>
-		<BTCANCEL>Cancelar</BTCANCEL>
-		<BTACCEPT>Aceptar</BTACCEPT>
-		<EXPMESSAGE1>actualizando cabecera del archivo... por favor espere</EXPMESSAGE1>
-		<EXPMESSAGE2>actualizando contenido del archivo... por favor espere</EXPMESSAGE2>
-		<EXPMESSAGE3>actualizando sección MOVI... por favor espere</EXPMESSAGE3>
-		<EXPMESSAGE4>actualizando sección IDX... por favor espere</EXPMESSAGE4>
-		<WAITTITLE>Guardar archivo</WAITTITLE>
-		<SAVEAS>Guardar archivo como...</SAVEAS>
-		<FCCTITLE>Cambiar FourCC...</FCCTITLE>
-		<FCCINFO>Actualizar aquí el valor del código y la descripción de FourCC:</FCCINFO>
-		<FCCCODE>Código FourCC:</FCCCODE>
-		<FCCDESC>Descr. FourCC:</FCCDESC>
-		<AUTOEXPORT>autoexport</AUTOEXPORT>
+		<ABOUTWINTITLE>Información sobre</ABOUTWINTITLE>
+		<ABOUTTABINFO>Información sobre</ABOUTTABINFO>
+		<ABOUTTABCOMPONENTS>Componentes</ABOUTTABCOMPONENTS>
+		<MAINFILE>&amp;Archivo</MAINFILE>		
+		<SCANFILE>Archivo</SCANFILE>
+		<SCANFOLDER>Carpetas</SCANFOLDER>
+		<SCANSUBFOLDERS>Carpetas y subcarpetas</SCANSUBFOLDERS>
+		<SAVEREPORT>Guardar informe</SAVEREPORT>
+		<EXIT>Salir</EXIT>
+		<MAINOPTIONS>&amp;Opciones</MAINOPTIONS>
+		<AUTOREPORT>Guardar automáticamente el informe</AUTOREPORT>
+		<MAINABOUT>A&amp;cerca de</MAINABOUT>
+		<INFOABOUT>Información sobre</INFOABOUT>
+		<TITLERESULT>Resultado del análisis</TITLERESULT>
+		<SCANWINTITLE>Análisis en curso...</SCANWINTITLE>
+		<SCANDESC>Extraer información del flujo de vídeo y audio desde:</SCANDESC>
+		
+		<FILEOPEN>Seleccionar archivo a analizar</FILEOPEN>
+		<FOLDEROPEN>Seleccionar carpeta a analizar</FOLDEROPEN>
+		<FILESAVE>Guardar archivo de informe como</FILESAVE>
+		
+		<SAVEREPORTWIN>Guardar informe</SAVEREPORTWIN>
+		<SAVEREPORTMSG>Archivo de informe guardado para</SAVEREPORTMSG>
+				
+		<SCANFILETT>Analiza un archivo multimedia para extraer información</SCANFILETT>
+		<SCANFOLDERTT>Analiza archivos multimedia que se encuentren en una carpeta específica</SCANFOLDERTT>
+		<SCANSUBFOLDERSTT>Analiza archivos multimedia que se encuentren en una carpeta específica y sus subcarpetas</SCANSUBFOLDERSTT>
+		<SAVEREPORTTT>Guarda el informe del archivo seleccionado en un archivo de texto</SAVEREPORTTT>
+		<EXITTT>Cierra la aplicación</EXITTT>
+		<AUTOREPORTTT>Para cada archivo analizado, genera automáticamente un archivo de informe en la misma carpeta</AUTOREPORTTT>
+		<INFOABOUTTT>Información sobre Themonospot</INFOABOUTTT>
+
 	</language>
 </Settings>
