@@ -1,5 +1,5 @@
-themonospot - Parser/editor and content descriptor for .avi and .mkv file types v0.8.0
-======================================================================================
+themonospot - Parser/editor and content descriptor for multimedia file types v0.8.1
+===================================================================================
 Copyright (c) 2007-2009, Armando Basile
 
 Thank you for using ( or at least trying out :) ) themonospot
