@@ -1,5 +1,9 @@
 2009-12-13  Armando Basile  <hmandevteam@gmail.com>
 
+	* themonospot-plugin-manager.pidb: 
+
+2009-12-13  Armando Basile  <hmandevteam@gmail.com>
+
 	* themonospot-plugin-manager.userprefs: 
 
 	- change position of base component solution file
